Revision history for Test-Warnings

{{$NEXT}}

0.036     2025-01-03 18:30:28Z
          - avoid redefinition warnings when $^W is enabled in tests
            (RT#158297)

0.035     2025-01-03 17:47:24Z
          - allow tests to pass even when Import::Into is not installed
            (RT#158296)
          - add backcompat shim for cases where Test::More is loaded in tests
            after Test::Warnings

0.034     2025-01-03 02:46:29Z
          - fix Test2 compability for done_testing()
          - Test2::Warnings added as a simple wrapper (for now)

0.033     2024-01-23 03:31:29Z
          - add Test2 compatibility in the test triggered by done_testing();
          - new long-awaited feature (!!!) "allow_patterns", to either
            temporarily or globally exempt particular warning patterns

0.032     2023-09-30 23:36:50Z
          - new config variable, $ENV{PERL_TEST_WARNINGS_ONLY_REPORT_WARNINGS},
          for temporarily turning failures into reports

0.031     2021-07-13 22:13:48Z
          - remove unneeded develop prereqs that caused metacpan to unduly
            raise the river position of some dependent modules

0.030     2020-03-21 16:56:30Z
          - fix tests that can fail when there is already an installed module
            named Foo::Bar::Baz (RT#132140)

0.029     2020-03-14 05:27:59Z
          - new :report_warnings feature, for printing all of the (unexpected)
            warning content when had_no_warnings() is called (Tina Mueller, PR#10)

0.028     2019-12-21 20:16:01Z
          - allow for calling warnings->import being called after importing
            the "warnings" sub

0.027     2019-09-28 03:54:47Z
          - new :fail_on_warning feature, for more easily seeing where the
            surprising warning appeared during testing

0.026     2016-01-27 03:13:25Z
          - fixed use of modules loaded by t/zzz-check-breaks.t
          - fix stderr suppression on perl 5.6

0.025     2016-01-24 02:59:28Z